# HackCBS_VUCA

./: .install-optimized.md  Anchor.toml  Cargo.toml  ENV_SETUP.md  FRONTEND_QUICK_START.md  FRONTEND_SETUP.md  GEMINI_EVALUATION_EXPLANATION.md  INSTALL.md  MONGODB_SETUP_INSTRUCTIONS.md  ONCHAIN_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_ENV_SETUP.md  QUICK_START.md  README.md  README_FLEXAI.md  REAL_ONCHAIN_GUIDE.md  RUN.md  SETUP.md  SETUP_COMPLETE.md  SETUP_FLEXAI.md  START_FRONTEND.sh  START_MONGODB.sh  WHAT_IS_PROGRAM_ID.md  generate_program_id.py  get_program_id.py  get_program_id.sh  index.html  install_nodejs.sh  package-lock.json  package.json  setup_backend.sh  setup_frontend.sh  setup_frontend_quick.sh  setup_no_sudo.sh  tailwind.config.js  vite.config.ts
backend/: .gitignore  =1.16.0  BACKEND_SUMMARY.md  CREATE_ENV.md  DEPLOYMENT.md  ERRORS_FOUND.md  ERRORS_SUMMARY.md  INTEGRATION_GUIDE.md  MONGODB_FIX.md  MONGODB_QUICK_SETUP.md  MONGODB_SETUP.md  ONCHAIN_SETUP.md  QUICK_ENV_GUIDE.txt  README.md  README_ENV.md  check_mongodb.sh  env.example  fix_mongodb_atlas.py  main.py  requirements.txt  setup.sh  setup_mongodb.sh  test_mongodb_connection.py
backend/alembic/: env.py
backend/app/: __init__.py
backend/scripts/: create_dummy_data.py  create_initial_migration.py  run_tests.py
backend/tests/: simulate_fl.py  test_federated_learning.py
src/: App.tsx  index.css  main.tsx
src/components/: Button.tsx  Card.tsx  Chart.tsx  Modal.tsx  ModeratorNavbar.tsx  Navbar.tsx  NeuralNetwork3D.tsx  TransactionModal.tsx
src/pages/: Landing.tsx  (+11 more)
(+25 files in other folders)
