[package]
name = "sentinel"
version = "0.1.0"
description = "Sentinel.ai Solana Smart Contracts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sentinel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"

